# libaoarw

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  libaoarw.c  libaoarw.h
